Added toggle selectable function on change view

--- a/client/src/scenes/Home/Home.scss
+++ b/client/src/scenes/Home/Home.scss
@@ -1,5 +1,6 @@
 @import '~@fullcalendar/core/main.css';
 @import '~@fullcalendar/daygrid/main.css';
+@import '~@fullcalendar/timegrid/main.css';
 
 .calendar-container {
     position: fixed;
