--- a/client/src/scenes/Home/components/EventForm/EventForm.scss
+++ b/client/src/scenes/Home/components/EventForm/EventForm.scss
@@ -1,7 +1,20 @@
+.form-modal {
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
 .form-container {
-    position: fixed;
-    top:300;
-    left:30;
-    right:30;
-    bottom:20;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
 }
